--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Yapi Geoffrey-davis </title>
-    <link rel="icon" href="https://github.com/geoffrey-davis-yapi/Siteweb/blob/main/image.jpg/Orange.jpg">
+    <link rel="icon" href="![Orange](https://user-images.githubusercontent.com/126072897/220635896-eab25174-859a-465a-970d-d3da42d3bb95.jpg)">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
