--- a/Cover.html
+++ b/Cover.html
@@ -13,13 +13,10 @@
         <div class="zoom">
             <div class="main">
                 <img src="image.jpg/LYR.JPG" alt="Les Yeux Rouges Cover">
-                <img src="image.jpg/image00002.jpeg" alt="Fond 1">
                 <img src="image.jpg/image00014.jpeg" alt="MISSIMISSI Cover">
-                <img src="image.jpg/image00001.jpeg" alt="Fond 2">
                 <img src="image.jpg/image00015.jpeg" alt="Bill Cover">
-                <img src="image.jpg/image00005.jpeg" alt="Fond 3">
                 <img src="image.jpg/image000018.jpg" alt="Pansement Cover">
-                <img src="image.jpg/image00003.jpeg" alt="Fond 4">
+                <img src="image.jpg/Pansement2.jpeg" alt="Pansement (2)">
                 <img src="image.jpg/Tonton Davis Pansement.jpeg" alt="Pansement Cover">
                 <img src="image.jpg/image00002.jpeg" alt="Fond 1">
                 <img src="image.jpg/Multifruits.jpeg" alt="Multifruits">
