--- a/Cover.html
+++ b/Cover.html
@@ -18,12 +18,12 @@
                 <img src="image.jpg/image000018.jpg" alt="Pansement Cover">
                 <img src="image.jpg/Pansement2.jpeg" alt="Pansement (2)">
                 <img src="image.jpg/Tonton Davis Pansement.jpeg" alt="Pansement Cover">
+                <img src="image.jpg/Logo SPLTCHR.jpeg" alt="Logo SPLTCHR">
+                <img src="image.jpg/SPLTCHR TV.jpg" alt="SPLTCHR TV">
+                <img src="image.jpg/Signature Mail SPLTCHR.jpeg" alt="Signature Mail SPLTCHR">
                 <img src="image.jpg/image00002.jpeg" alt="Fond 1">
                 <img src="image.jpg/Multifruits.jpeg" alt="Multifruits">
                 <img src="image.jpg/image00001.jpeg" alt="Fond 2">
-                <img src="image.jpg/Logo SPLTCHR.jpeg" alt="Logo SPLTCHR">
-                <img src="image.jpg/image00005.jpeg" alt="Fond 3">
-                <img src="image.jpg/Signature Mail SPLTCHR.jpeg" alt="Signature Mail SPLTCHR">
                 <img src="image.jpg/image00003.jpeg" alt="Fond 4">
                 <img src="image.jpg/Tonton Davis.jpeg" alt="Tonton Davis">
                 <img src="image.jpg/image00002.jpeg" alt="Fond 1">
