--- a/Cover.html
+++ b/Cover.html
@@ -22,12 +22,9 @@
                 <img src="image.jpg/Signature Mail SPLTCHR.jpeg" alt="Signature Mail SPLTCHR">
                 <img src="image.jpg/Logo SPLTCHR.jpeg" alt="Logo SPLTCHR">
                 <img src="image.jpg/Signature Mail SPLTCHR.jpeg" alt="Signature Mail SPLTCHR">
-                <img src="image.jpg/image00002.jpeg" alt="Fond 1">
-                <img src="image.jpg/Multifruits.jpeg" alt="Multifruits">
-                <img src="image.jpg/image00001.jpeg" alt="Fond 2">
-                <img src="image.jpg/image00003.jpeg" alt="Fond 4">
+                <img src="image.jpg/Multifruits logo.jpg" alt="Multifruits Logo">
                 <img src="image.jpg/Tonton Davis.jpeg" alt="Tonton Davis">
-                <img src="image.jpg/image00002.jpeg" alt="Fond 1">
+                <img src="image.jpg/Multifruits.jpeg" alt="Multifruits">
             </div>
         </div>
     </section>
