--- a/index.html
+++ b/index.html
@@ -191,6 +191,15 @@
                         <br>-Réalisation de la cover avec une animatrice 2D/3D (Léa Dannay) 
                         <br>-Préparation clip vidéo avec une équipe de production (Kit Production).
                     </p>
+                    <p class="dates">2022</p>
+                </div>
+                <div class="project">
+                    <h4> Stage (2 mois) SPLTCHR! TV </h4>
+                    <p class="description">
+                        <br>-Refonte logo 
+                        <br>-Réalisation animation vidéo 
+                        <br>-Animation pictogrammes sur le site web 
+                    </p>
                     <p class="dates">2023</p>
                 </div>
                 <div class="project">
