--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Header titre et texte -->
     <section class="page-content">
         <header>
-           <h1> Bonjour, je suis concepteur designer UI (User Interface).</h1>
+           <h1> Bonjour, je suis Yapi Geoffrey-Davis, concepteur designer UI (User Interface).</h1>
            <p>
                Originaire de Lille ; j'explore la vie autour du numérique, de la musique et 
                de la mode. Concevoir et réaliser des outils de communication pour mettre en avant 
