--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             </div>
             
         </div>
-        <p>Copyright Yapi Geoffrey-davis, France 2023</p>
+        <p>Copyright Yapi Geoffrey-davis, France 2023.</p>
     </footer>
 </body>
 </html>
