--- a/index.html
+++ b/index.html
@@ -232,7 +232,8 @@
     <footer>
         <div class="colonnes">
             <div class="colonne">
-                <p>Le numérique est notre avenir. C'est un facteur indispensable au progrès et à la pérennité de notre société.</p>
+                <p>Le numérique est notre avenir. 
+                    <br>C'est un facteur indispensable au progrès et à la pérennité de notre société.</p>
                  
             </div>
             <div class="colonne">
