--- a/index.html
+++ b/index.html
@@ -232,8 +232,9 @@
     <footer>
         <div class="colonnes">
             <div class="colonne">
-                <p>Le numérique est notre avenir. 
-                    <br>C'est un facteur indispensable au progrès et à la pérennité de notre société.</p>
+                <p>Le numérique est notre avenir.</p> 
+                <p>C'est un facteur indispensable au progrès</p>
+                <p>et à la pérennité de notre société.</p>
                  
             </div>
             <div class="colonne">
