--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                 <p> Concepteur designer UI (User Interface) </p>
                 <p> artiste compositeur interprête </p>
                 <p> Community manager.</p>
-                <button> <a href="CV/CV YAPI Geoffrey-davis.pdf"target="_blank">CV téléchargez ici</a></button>
+                <button> <a href="CV/CV YAPI.pdf"target="_blank">CV téléchargez ici</a></button>
             </div>
             
         </div>
