--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
             <div class="timeline-items">
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
+                    <div class="timeline-date">Mai 2023 à aujourd'hui</div>
+                    <div class="timeline-content">
+                        <h3>1 Formation = 1 Job : Incubateur Numérique </h3>
+                        <p>AFPA Roubaix / Lomme. 
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
                     <div class="timeline-date">Octobre 2021 à novembre 2022</div>
                     <div class="timeline-content">
                         <h3>Titre Professionnel Concepteur Développeur UI (User Interface) niveau 6</h3>
