--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@
             <div class="timeline-items">
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
+                    <div class="timeline-date">Depuis Octobre 2021 </div>
+                    <div class="timeline-content">
+                        <h3>Projet Multifruits</h3>
+                        <p>lemultifruits.fr  / Lille.</p>
+                        <p> Réalisation d’une charte graphique 
+                            <br>Réalisation du cahier des charges
+                            <br>Maquette dynamique du site
+                            <br>Réalisation d’un site web.
+                            
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
                     <div class="timeline-date">Juin 2022 à juillet 2022</div>
                     <div class="timeline-content">
                         <h3>Stage concepteur designer UI </h3>
@@ -50,7 +64,7 @@
                         <p>Réalisation d'un nouveau logo pour le site SPLTCHR TV 
                             <br>Création d'une nouvelle signature mail
                             <br>Création d'un logo animé
-                            <br>Animation de différents pictogrammes 
+                            <br>Animation de différents pictogrammes.
                             
                         </p>
                     </div>
