--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="timeline-date">Depuis Octobre 2021 </div>
                     <div class="timeline-content">
                         <h3>Projet Multifruits</h3>
-                        <p> <a href="https://lemultifruits.fr/"lemultifruits.fr  </a>/ Lille.</p>
+                        <p> <a href="https://lemultifruits.fr/"</a>lemultifruits.fr  / Lille.</p>
                         <p> Réalisation d’une charte graphique 
                             <br>Réalisation du cahier des charges
                             <br>Maquette dynamique du site
