--- a/index.html
+++ b/index.html
@@ -192,9 +192,10 @@
                 <div class="project">
                     <h4>Pansement</h4>
                     <p class="description">
-                        -Enregistrement du single de Tonton Davis
+                        -Enregistrement single chez Audioblend
                         <br> -Réalisation du moodboard pour le tournage du clip vidéo 
-                        <br> -Préparation de la stratégie de communication sur les réseaux.
+                        <br> -Producteur executif clip vidéo "Pansement"
+                        <br> -Préparation de la stratégie de communication sur les réseaux
                     </p>
                     <p class="dates">2021 - 2022 </p>
                 </div>
@@ -202,6 +203,7 @@
                     <h4> Les Yeux Rouges </h4>
                     <p class="description">
                         -Réalisation de la cover 
+                        <br> -Enregistrement single chez The Mooday Club Studio
                         <br> -Réalisation d'un visualizer pour YouTube.
                     </p>
                     <p class="dates">2022</p>
@@ -209,9 +211,9 @@
                 <div class="project">
                     <h4> MOJO </h4>
                     <p class="description">
-                        - Projet audio visuel
-                        <br>-Réalisation de la cover avec une animatrice 2D/3D (Léa Dannay) 
-                        <br>-Préparation clip vidéo avec une équipe de production (Kit Production).
+                        -Enregistrement single chez Audioblend
+                        <br>-Réalisation de la cover avec une animatrice 2D/3D (Léa Dannay)
+                        <br> -Réalisation d'un vinyle 45 tours. 
                     </p>
                     <p class="dates">2023</p>
                 </div>
@@ -227,7 +229,7 @@
                 <div class="project">
                     <h4> New Road </h4>
                     <p class="description">
-                        -Réalisation d'un projet audio 
+                        -Enregistrement single chez Audioblend 
                         <br>-Préparation stratégie de communication sur les réseaux sociaux. 
                     </p>
                     <p class="dates">2023</p>
