--- a/Cover.html
+++ b/Cover.html
@@ -19,12 +19,16 @@
                 <img src="image.jpg/image000018.jpg" alt="Pansement Cover">
                 <img src="image.jpg/Pansement2.jpeg" alt="Pansement (2)">
                 <img src="image.jpg/Tonton Davis Pansement.jpeg" alt="Pansement Cover">
+                <img src="image.jpg/new road 2.jpeg" alt="New Road">
+                <img src="image.jpg/Tonton Davis.jpeg" alt="Tonton Davis">
                 <img src="image.jpg/Signature Mail SPLTCHR.jpeg" alt="Signature Mail SPLTCHR">
                 <img src="image.jpg/Logo SPLTCHR.jpeg" alt="Logo SPLTCHR">
                 <img src="image.jpg/Signature Mail SPLTCHR.jpeg" alt="Signature Mail SPLTCHR">
-                <img src="image.jpg/Multifruits logo.jpg" alt="Multifruits Logo">
-                <img src="image.jpg/Tonton Davis.jpeg" alt="Tonton Davis">
-                <img src="image.jpg/Multifruits.jpeg" alt="Multifruits">
+                <img src="image.jpg/SPLTCHR_2.JPG" alt="Logo SPLTCHR (2)">
+                <img src="image.jpg/Logo M Multifruits.png" alt="Logo Multifruits">
+                <img src="image.jpg/Logo M Multifruits (2).png" alt="Logo Multifruits (2)">
+                <img src="image.jpg/Logo Multifruits (3).png" alt="Logo Multifruits">
+                <img src="image.jpg/Belle Campagne Fruitée.png" alt="Belle Campagne Fruitée.">
             </div>
         </div>
     </section>
