--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Yapi Geoffrey-davis </title>
-    <link rel="icon" href="image.jpg/YGD monogram logo BLEU.png">
+    <link rel="icon" href="image.jpg/YG monogram logo orange.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
