--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="timeline-date">Depuis Octobre 2021 </div>
                     <div class="timeline-content">
                         <h3>Projet Multifruits</h3>
-                        <p>www.lemultifruits.fr  / Lille.</p>
+                        <a href="https://lemultifruits.fr/"target="_blank">lemultifruits.fr</a>
                         <p> Réalisation d’une charte graphique 
                             <br>Réalisation du cahier des charges
                             <br>Maquette dynamique du site
@@ -183,19 +183,23 @@
                 <div class="project">
                     <h4>LAZER</h4>
                     <p class="description">
-                        -Réalisation de la stratégie de communication sur les réseaux
+                        <a href="https://www.youtube.com/watch?v=4hjRivsl_xg"target="_blank">Clip vidéo</a>
+                        <br>-Réalisation de la stratégie de communication sur les réseaux
                         sociaux avec le label d'artiste "The Moonday Club" pour l'artiste 
-                        Tonton Davis.
+                        Tonton Davis
+                        <br>-Réalisation de la cover et du shooting avec une Directrice Artistique, Ophélie Luis Madeira.
                     </p>
                     <p class="dates">2020 - 2021</p>
                 </div>
                 <div class="project">
                     <h4>Pansement</h4>
                     <p class="description">
-                        -Enregistrement single chez Audioblend
-                        <br> -Réalisation du moodboard pour le tournage du clip vidéo 
-                        <br> -Producteur executif clip vidéo "Pansement"
-                        <br> -Préparation de la stratégie de communication sur les réseaux
+                        <a href="https://www.youtube.com/watch?v=bwY9SrKDrsY"target="_blank">Clip vidéo</a>
+                        <br>-Enregistrement single chez Audioblend
+                        <br>-Réalisation du moodboard pour le tournage du clip vidéo
+                        <br>-Réalisation de la cover avec une Directrice Artistique, Chloé Huet 
+                        <br>-Producteur executif clip vidéo "Pansement"
+                        <br>-Préparation de la stratégie de communication sur les réseaux sociaux.
                     </p>
                     <p class="dates">2021 - 2022 </p>
                 </div>
@@ -203,8 +207,8 @@
                     <h4> Les Yeux Rouges </h4>
                     <p class="description">
                         -Réalisation de la cover 
-                        <br> -Enregistrement single chez The Mooday Club Studio
-                        <br> -Réalisation d'un visualizer pour YouTube.
+                        <br>-Enregistrement single chez The Moonday Club Studio
+                        <br>-Réalisation d'un visualizer pour YouTube.
                     </p>
                     <p class="dates">2022</p>
                 </div>
@@ -212,15 +216,16 @@
                     <h4> MOJO </h4>
                     <p class="description">
                         -Enregistrement single chez Audioblend
-                        <br>-Réalisation de la cover avec une animatrice 2D/3D (Léa Dannay)
-                        <br> -Réalisation d'un vinyle 45 tours. 
+                        <br>-Réalisation de la cover avec une animatrice 2D/3D, Léa Dannay
+                        <br>-Réalisation d'un vinyle 45 tours. 
                     </p>
                     <p class="dates">2023</p>
                 </div>
                 <div class="project">
                     <h4> Stage (2 mois) SPLTCHR! TV </h4>
                     <p class="description">
-                        -Refonte logo 
+                        <a href="https://www.spltchr.tv/"target="_blank">SPLTCHR.TV</a>
+                        <br>-Refonte logo 
                         <br>-Réalisation animation vidéo 
                         <br>-Animation pictogrammes sur le site web 
                     </p>
@@ -237,13 +242,24 @@
                 <div class="project">
                     <h4>Multifruits</h4>
                     <p class="description">
-                        -Projet de création de marque de vêtement
+                        <a href="https://lemultifruits.fr/"target="_blank">lemultifruits.fr</a>
+                        <br>-Projet de création de marque de vêtement
                         <br>-Réalisation d’une charte graphique 
                         <br>-Réalisation du cahier des charges 
                         <br>-Création de support de communication 
                         <br>-Maquette dynamique du site 
                         <br>-Réalisation d’un site web
                         <br>-Animation vidéo.
+                    </p>
+                    <p class="dates">2023</p>
+                </div>
+                <div class="project">
+                    <h4>Symphonie Music</h4>
+                    <p class="description">
+                        -Projet de site ecommerce de vente d'instrument de musique
+                        <br>-Réalisation d’un wireframe sans design pour le site 
+                        <br>-Réalisation d'une charte graphique pour le logo du site
+                        <br>-Maquetage du projet sur figma.
                     </p>
                     <p class="dates">2023</p>
                 </div>
