--- a/Cover.html
+++ b/Cover.html
@@ -13,14 +13,22 @@
     <section class="image">
         <div class="zoom">
             <div class="main">
-                <img src="image.jpg/LYR.JPG" alt="Les Yeux Rouges Cover">
-                <img src="image.jpg/image00014.jpeg" alt="MISSIMISSI Cover">
-                <img src="image.jpg/image00015.jpeg" alt="Bill Cover">
+                <img src="image.jpg/Lazer Cover.JPG" alt="Lazer Cover">
+                <img src="image.jpg/Lazer Shooting.jpg" alt="Shooting Lazer">
+                <img src="image.jpg/Lazer Shooting 2.JPG" alt="Shooting Lazer">
+                <img src="image.jpg/Boule.jpg" alt="Shooting Lazer">
                 <img src="image.jpg/image000018.jpg" alt="Pansement Cover">
-                <img src="image.jpg/Pansement2.jpeg" alt="Pansement (2)">
-                <img src="image.jpg/Tonton Davis Pansement.jpeg" alt="Pansement Cover">
-                <img src="image.jpg/new road 2.jpeg" alt="New Road">
-                <img src="image.jpg/Tonton Davis.jpeg" alt="Tonton Davis">
+                <img src="image.jpg/Tonton Davis Pansement.jpeg" alt="Pansement (1)">
+                <img src="image.jpg/Pansement2.jpeg" alt="Shooting Pansement">
+                <img src="image.jpg/Pansement shooting 3.png" alt="Shooting Pansement">
+                <img src="image.jpg/LYR.JPG" alt="Les Yeux Rouges Cover">
+                <img src="image.jpg/Les yeux rouges 3.jpg" alt="Les Yeux Rouges Shooting">
+                <img src="image.jpg/Les yeux rouges 2.jpg" alt="Yeux Rouges Shooting">
+                <img src="image.jpg/Les yeux rouges 1.jpg" alt="Yeux Rouges Shooting">
+                <img src="image.jpg/New Road Cover.jpg" alt="New Road Cover">
+                <img src="image.jpg/New road Shooting.jpeg" alt="New Road Shooting">
+                <img src="image.jpg/New Road Shooting 2.jpg" alt="New Road Shooting">
+                <img src="image.jpg/New Road shooting 3.jpg" alt="New Road Shooting">
                 <img src="image.jpg/Signature Mail SPLTCHR.jpeg" alt="Signature Mail SPLTCHR">
                 <img src="image.jpg/Logo SPLTCHR.jpeg" alt="Logo SPLTCHR">
                 <img src="image.jpg/Signature Mail SPLTCHR.jpeg" alt="Signature Mail SPLTCHR">
