--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="timeline-date">Depuis Octobre 2021 </div>
                     <div class="timeline-content">
                         <h3>Projet Multifruits</h3>
-                        <a href="https://lemultifruits.fr/"target="_blank">lemultifruits.fr</a>
+                        <a href="https://lemultifruits.fr/"target="_blank"><strong>lemultifruits.fr</strong></a>
                         <p> Réalisation d’une charte graphique 
                             <br>Réalisation du cahier des charges
                             <br>Maquette dynamique du site
@@ -183,7 +183,7 @@
                 <div class="project">
                     <h4>LAZER</h4>
                     <p class="description">
-                        <a href="https://www.youtube.com/watch?v=4hjRivsl_xg"target="_blank">Clip vidéo</a>
+                        <a href="https://www.youtube.com/watch?v=4hjRivsl_xg"target="_blank"><strong>Clip vidéo</strong></a>
                         <br>-Réalisation de la stratégie de communication sur les réseaux
                         sociaux avec le label d'artiste "The Moonday Club" pour l'artiste 
                         Tonton Davis
@@ -194,7 +194,7 @@
                 <div class="project">
                     <h4>Pansement</h4>
                     <p class="description">
-                        <a href="https://www.youtube.com/watch?v=bwY9SrKDrsY"target="_blank">Clip vidéo</a>
+                        <a href="https://www.youtube.com/watch?v=bwY9SrKDrsY"target="_blank"><strong>Clip vidéo</strong></a>
                         <br>-Enregistrement single chez Audioblend
                         <br>-Réalisation du moodboard pour le tournage du clip vidéo
                         <br>-Réalisation de la cover avec une Directrice Artistique, Chloé Huet 
@@ -224,7 +224,7 @@
                 <div class="project">
                     <h4> Stage (2 mois) SPLTCHR! TV </h4>
                     <p class="description">
-                        <a href="https://www.spltchr.tv/"target="_blank">SPLTCHR.TV</a>
+                        <a href="https://www.spltchr.tv/"target="_blank"><strong>SPLTCHR.TV</strong></a>
                         <br>-Refonte logo 
                         <br>-Réalisation animation vidéo 
                         <br>-Animation pictogrammes sur le site web 
@@ -242,7 +242,7 @@
                 <div class="project">
                     <h4>Multifruits</h4>
                     <p class="description">
-                        <a href="https://lemultifruits.fr/"target="_blank">lemultifruits.fr</a>
+                        <a href="https://lemultifruits.fr/"target="_blank"><strong>lemultifruits.fr</strong></a>
                         <br>-Projet de création de marque de vêtement
                         <br>-Réalisation d’une charte graphique 
                         <br>-Réalisation du cahier des charges 
