--- a/Cover.html
+++ b/Cover.html
@@ -38,13 +38,13 @@
                 <img src="image.jpg/Logo SPLTCHR.jpeg" alt="Logo SPLTCHR">
                 <img src="image.jpg/Signature Mail SPLTCHR.jpeg" alt="Signature Mail SPLTCHR">
                 <img src="image.jpg/SPLTCHR_2.JPG" alt="Logo SPLTCHR (2)">
-                <img src="image.jpg/Logo M Multifruits.png" alt="Logo Multifruits">
-                <img src="image.jpg/Logo M Multifruits (2).png" alt="Logo Multifruits (2)">
-                <img src="image.jpg/Logo Multifruits (3).png" alt="Logo Multifruits">
+                <img src="image.jpg/Logo M Multifruits fond beige.png" alt="Logo Multifruits">
+                <img src="image.jpg/Logo M Multifruits fond marron.png" alt="Logo Multifruits (2)">
+                <img src="image.jpg/Logo M Multifruits citron.png" alt="Logo Multifruits citron">
                 <img src="image.jpg/Belle Campagne Fruitée.png" alt="Belle Campagne Fruitée.">
                 <img src="image.jpg/Mr Multifruits.png" alt="Mr Multifruits">
                 <img src="image.jpg/Mr Multifruits 2.png" alt="Mr Multifruits">
-                <img src="image.jpg/Logo M Multifruits citron.png" alt="Logo Multifruits citron">
+                <img src="image.jpg/Logo M Multifruits et Clémentine (1).png" alt="Logo Multifruits cléméntine">
                 <img src="image.jpg/Tonton Davis.jpeg" alt="Tonton Davis">
                 <img src="image.jpg/MOJO.png" alt="Cover MOJO">
                 <img src="image.jpg/MOJO 2.png" alt="Cover MOJO 2">
