--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 
     <script src="js/script.js"></script>
     <footer>
-        <p>Copyright Yapi / Geoffrey-davis, France 2023.</p>
+        <p>Copyright 2023 / Yapi Geoffrey-davis.</p>
     </footer>
 </body>
 </html>
