--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="circles-5"></div>
         <div class="circles-6"></div>
         <div class="circles-7"></div>
+        <div class="circles-8"></div>
     </div>
     <!-- Background Circles End -->   
     
@@ -478,7 +479,7 @@
 
     <script src="js/script.js"></script>
     <footer>
-        <p>Copyright 2023 / Yapi Geoffrey-davis.</p>
+        <p>Copyright Yapi / Geoffrey-davis, France 2023.</p>
     </footer>
 </body>
 </html>
