--- a/index.html
+++ b/index.html
@@ -227,10 +227,33 @@
                     </div>
                 </div>
                 <div class="row">
+                     <!-- Portfolio Item Start -->
+                     <div class="portfolio-item">
+                        <div class="portfolio-item-thumbnail">
+                            <img src="img/portfolio/13.png" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">  
+                        </div>
+                        <h3 class="portfolio-item-title">Carte de visite</h3>
+                        <button type="button" class="btn view-project-btn">Voir le projet</button>
+                        <div class="portfolio-item-details">
+                            <div class="description">
+                                <p>Création et réalisation d'une carte de visite pour booster la communication. 
+
+                                </p>
+                            </div>
+                            <div class="general-info">
+                                <ul>
+                                    <li>Date - <span>Octobre 2023</span></li>
+                                    <li>Logiciels utilisés - <span>Illustrator</span></li>
+                                    <li>Poste - <span>Designer</span></li>
+                                </ul>
+                            </div>
+                        </div>     
+                    </div>
+                    <!-- Portfolio Item End-->
                     <!-- Portfolio Item Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="img/portfolio/1.png" alt="Symphonie Music site web (1)">  
+                            <img src="img/portfolio/14.png" alt="Symphonie Music site web (1)">  
                         </div>
                         <h3 class="portfolio-item-title">Symphonie Music website</h3>
                         <button type="button" class="btn view-project-btn">Voir le projet</button>
@@ -259,7 +282,7 @@
                     <!-- Portfolio Item Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="img/portfolio/3.png" alt="Le Multifruits site web (1)">  
+                            <img src="img/portfolio/4.png" alt="Le Multifruits site web (1)">  
                         </div>
                         <h3 class="portfolio-item-title">le multifruits website</h3>
                         <button type="button" class="btn view-project-btn">Voir le projet</button>
