--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <div class="timeline">
                                 <div class="timeline-item">
                                     <span class="date">Octobre 2021 - novembre 2022</span>
-                                    <h4>BAC +3/4 Concepteur Designer UI - <span> Adapeco / Roubaix</span></h4>
+                                    <h4>BAC +4 Concepteur Designer UI - <span> Adapeco / Roubaix</span></h4>
                                     <p>Titre professionnel Concepteur Designer UI (User Interface) Niveau 6.</p>
                                 </div>
                                 <div class="timeline-item">
