--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
                      <!-- Portfolio Item Start -->
                      <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="img/portfolio/13.png" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">  
+                            <img src="img/portfolio/24.png" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">  
                         </div>
-                        <h3 class="portfolio-item-title">Carte de visite YAPI Geoffrey-Davis</h3>
+                        <h3 class="portfolio-item-title">Carte de visite </h3>
                         <button type="button" class="btn view-project-btn">Voir le projet</button>
                         <div class="portfolio-item-details">
                             <div class="description">
@@ -258,8 +258,8 @@
                                 </ul>
                             </div>
                             <br>
-                            <img src="img/portfolio/24.png" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
-                            <img src="img/portfolio/23.png" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
+                            <img src="img/portfolio/28.png" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
+                            <img src="img/portfolio/29.png" alt="Carte de visite Yapi Geoffrey Geoffrey-Davis">
                         </div>     
                     </div>
                     <!-- Portfolio Item End-->
@@ -268,7 +268,7 @@
                         <div class="portfolio-item-thumbnail">
                             <img src="img/portfolio/14.png" alt="Symphonie Music site web (1)">  
                         </div>
-                        <h3 class="portfolio-item-title">Symphonie Music Design maquette</h3>
+                        <h3 class="portfolio-item-title">Symphonie Music maquette</h3>
                         <button type="button" class="btn view-project-btn">Voir le projet</button>
                         <div class="portfolio-item-details">
                             <div class="description">
@@ -303,7 +303,7 @@
                      <!-- Portfolio Item Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="img/portfolio/17.png" alt="Symphonie Music site web (1)">  
+                            <img src="img/portfolio/17.png" alt="Symphonie Music Logo (1)">  
                         </div>
                         <h3 class="portfolio-item-title">Symphonie Music Logo</h3>
                         <button type="button" class="btn view-project-btn">Voir le projet</button>
@@ -325,13 +325,16 @@
                                     <li>Poste - <span>Designer</span></li>
                                 </ul>
                             </div>
+                            <br>
+                            <img src="img/portfolio/25.png" alt="Symphonie Music Logo">
+                            <img src="img/portfolio/27.png" alt="Symphonie Music Logo">
                         </div>     
                     </div>
                     <!-- Portfolio Item End-->
                     <!-- Portfolio Item Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="img/portfolio/4.png" alt="Le Multifruits site web (1)">  
+                            <img src="img/portfolio/34.png" alt="Le Multifruits site web (1)">  
                         </div>
                         <h3 class="portfolio-item-title">le multifruits website</h3>
                         <button type="button" class="btn view-project-btn">Voir le projet</button>
@@ -357,6 +360,10 @@
                                     <li>Voir plus - <span><a href="https://lemultifruits.fr/" target="_blank">www.lemultifruits.fr</a></span></li>
                                 </ul>
                             </div>
+                            <br>
+                            <img src="img/portfolio/34.png" alt="Le Multifruits site web">
+                            <img src="img/portfolio/38.gif" style="display: block; margin: auto;" alt="Le Multifruits site web">
+                            <img src="img/portfolio/35.gif" style="display: block; margin: auto;" alt="Le Multifruits site web">
                         </div>     
                     </div>
                     <!-- Portfolio Item End-->
@@ -391,6 +398,9 @@
                                     <li>Voir plus - <span><a href="https://lemultifruits.fr/" target="_blank">www.lemultifruits.fr</a></span></li>
                                 </ul>
                             </div>
+                            <br>
+                            <img src="img/portfolio/30.png" alt="Multifruits Logo">
+                            <img src="img/portfolio/31.png" alt="Multifruits Logo">
                         </div>     
                     </div>
                     <!-- Portfolio Item End-->
@@ -419,6 +429,9 @@
                                     <li>Voir plus - <span><a href="https://www.spltchr.tv/" target="_blank">www.spltchr.tv</a></span></li>
                                 </ul>
                             </div>
+                            <br>
+                            <img src="img/portfolio/37.gif" alt="SPLTCHR Logo"> 
+                            <img src="img/portfolio/33.png" alt="SPLTCHR site web">
                         </div>     
                     </div>
                     <!-- Portfolio Item End-->
@@ -471,6 +484,7 @@
                                     <li>Voir plus - <span><a href="https://www.youtube.com/watch?v=qDsyI-gX_x8" target="_blank">Tonton Davis - Les Yeux Rouges (visualizer)</a></span></li>
                                 </ul>
                             </div>
+                            <img src="img/portfolio/39.png" alt="Les Yeux Rouges Cover"> 
                         </div>     
                     </div>
                     <!-- Portfolio Item End-->
