--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class="tab-content" id="experience">
                             <div class="timeline">
                                 <div class="timeline-item">
-                                    <span class="date">Depuis Novembre 2023</span>
+                                    <span class="date">Novembre 2023 - janvier 2025</span>
                                     <h4>Employé logistique - <span> Nocibé / Villeneuve d'Ascq</span></h4>
                                     <P>Stockage
                                     Manutentions diverses</P>
